<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/change_email_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/old_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_email"
        android:inputType="textEmailAddress">

        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/new_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_email"
        android:inputType="textEmailAddress">


    </EditText>

    <EditText
        android:id="@+id/confirm_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_email"
        android:inputType="textEmailAddress">

    </EditText>

</LinearLayout>